# planted

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_method.py
planted/: __init__.py  __main__.py  benchmark.py  data.py  figures.py  methods.py  score.py  spx_data.py  worlds.py
tests/: test_methods.py  test_null_sanity.py  test_spx_data.py
