[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "planted"
dynamic = ["version"]
description = "A benchmark for pattern-discovery methods on financial time series: synthetic markets with planted ground truth that grade a method on recovery AND noise-rejection — does it refuse to hallucinate structure that isn't there?"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tim Gordon" }]
keywords = ["benchmark", "finance", "time-series", "quant", "regime-detection",
            "surrogate-data", "null-hypothesis", "machine-learning", "markets"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []   # standard library only, by design

[project.urls]
Homepage = "https://github.com/timgordontg/planted"

[project.scripts]
planted = "planted.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "planted.__version__" }   # single source: planted/__init__.py

[tool.setuptools.packages.find]
include = ["planted*"]
